@@ -5,7 +5,7 @@ import "github.com/urfave/cli"
 var (
 	TestnetName = cli.StringFlag{
 		Name:  "testnet",
-		Usage: "Testnet ",
+		Usage: "ID of the testnet to target",
 	}
 	Port = cli.IntFlag{
 		Name:  "Port",
